--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,14 @@ uuid = "bd7a2bd1-a44c-4fbc-ad38-57c07fb6f0f7"
 authors = ["rex <1073853456@qq.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+QRCoders = "f42e9828-16f3-11ed-2883-9126170b272d"
+QRDecoders = "d4999880-6331-4276-8b7d-7ee1f305cff8"
+
 [compat]
-julia = "1"
+julia = "1.6"
+QRCoders = "1.3"
+QRDecoders = "0.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
